fixed view on mobile

--- a/sass/_html.sass
+++ b/sass/_html.sass
@@ -10,6 +10,7 @@ html
     body
         background-color: #000000
         min-height: 100vh
+        width: 100vw
         +setFlex(column, flex-start, stretch, nowrap)
 
 @media (min-width: 360px)
